--- a/components/snackbar/snackbar.html
+++ b/components/snackbar/snackbar.html
@@ -71,6 +71,7 @@
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list active-list-item"><a href="./snackbar.html">Snackbar</a></li>
+                                    <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
                                 </ul>
                             </div>
                         </div>
