--- a/components/input/input.html
+++ b/components/input/input.html
@@ -71,6 +71,7 @@
                                     <li class="aside-list"><a href="../modal/modal.html">Modal</a></li>
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
+                                    <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
                                 </ul>
                             </div>
                         </div>
