--- a/CSS/documentation.css
+++ b/CSS/documentation.css
@@ -245,6 +245,10 @@ main{
 
 }
 
+.position-relative{
+    position : relative;
+}
+
 
 
 /********************** media queries *******************************/
