--- a/components/Grid/grid.html
+++ b/components/Grid/grid.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="./grid.css">
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <title>Grid | ZestUI</title>
 </head>
 <body>
@@ -70,6 +70,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list active-list-item"><a href="./grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
