--- a/components/button/button.html
+++ b/components/button/button.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="../avatar/avatar.css"> -->
     <link rel="stylesheet" href="./button.css">
     <!-- <link rel="stylesheet" href="./badge.css"> -->
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <title>Buttons | ZestUI</title>
 </head>
@@ -73,6 +73,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
