--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../button/button.css">
     <link rel="stylesheet" href="../typography/typography.css">
     <link rel="stylesheet" href="./modal.css">
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <title>Modal | ZestUI</title>
 </head>
 <body>
@@ -72,6 +72,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
