--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../typography/typography.css">
     <link rel="stylesheet" href="./rating.css">
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <title>Rating | ZestUI</title>
 </head>
 <body>
@@ -73,6 +73,7 @@
                                     <li class="aside-list active-list-item"><a href="./rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
