--- a/components/typography/typography.html
+++ b/components/typography/typography.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="./typography.css">
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <title>Typography | ZestUI</title>
 </head>
 <body>
@@ -69,6 +69,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
