--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -9,8 +9,7 @@
     <!-- <link rel="stylesheet" href="../avatar/avatar.css"> -->
     <link rel="stylesheet" href="./alert.css">
     <!-- <link rel="stylesheet" href="./badge.css"> -->
-    <script src="../../prism/prism.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script> -->
+    <script src="../../prism/prism.js" defer></script>
     <title>Alerts | ZestUI</title>
 </head>
 <body>
@@ -73,6 +72,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
