--- a/components/badges/badge.html
+++ b/components/badges/badge.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="../avatar/avatar.css">
     <link rel="stylesheet" href="./badge.css">
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <!-- <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script> -->
     <title>Badges | ZestUI</title>
 </head>
@@ -72,6 +72,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list"><a href="../snackbar/snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
