--- a/components/snackbar/snackbar.html
+++ b/components/snackbar/snackbar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../typography/typography.css">
     <link rel="stylesheet" href="./snackbar.css">
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
-    <script src="../../prism/prism.js"></script>
+    <script src="../../prism/prism.js" defer></script>
     <title>Snackbar | ZestUI</title>
 </head>
 <body>
@@ -72,6 +72,7 @@
                                     <li class="aside-list"><a href="../rating/rating.html">Rating</a></li>
                                     <li class="aside-list active-list-item"><a href="./snackbar.html">Snackbar</a></li>
                                     <li class="aside-list"><a href="../Grid/grid.html">Grid</a></li>
+                                    <li class="aside-list"><a href="../slider/slider.html">Slider</a></li>
                                 </ul>
                             </div>
                         </div>
