--- a/components/slider/slider.css
+++ b/components/slider/slider.css
@@ -6,7 +6,8 @@
 
 .slider-container{
     width : 30rem;
-    height : 6.15rem;
+    /* height : 6.15rem; */
+    /* border : 3px solid green; */
 }
 
 .slider{
@@ -53,4 +54,5 @@
 
 .position-relative{
     position: relative;
+    /* border: 3px solid red; */
 }
