introductory pages done and favicon added

--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -3,7 +3,7 @@
     --primary-hover : #4F46E5;
     --background-color : #fffafa;
     --dark-gray : #3d3c3c;
-    --test-color : rebeccapurple;
+    --test-color : #663399;
     --light-test-color : rgba(102, 51, 153, 0.356);
     --status-online : #33ff00;
     --status-offline : #939792;
