--- a/components/badges/badge.html
+++ b/components/badges/badge.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="../avatar/avatar.css">
@@ -21,7 +25,7 @@
                 </div>
                 <div class="nav-list">
                     <ul>
-                        <li><a href="#">Docs</a></li>
+                        <li><a href="../avatar/avatar.html">Docs</a></li>
                         <li><a href="#">Examples</a></li>
                     </ul>
                 </div>
@@ -50,9 +54,8 @@
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Get started</h3>
-                                    <li class="aside-list"><a href="#">Introduction</a></li>
-                                    <li class="aside-list"><a href="#">Colors</a></li>
-                                    <li class="aside-list"><a href="#">Conclusion</a></li>
+                                    <li class="aside-list"><a href="../../introductory-pages/installation.html">Installation</a></li>
+                                    <li class="aside-list"><a href="../../introductory-pages/colors.html">Colors</a></li>
                                 </ul>
                             </div>
                             <div class="aside-list-container txt-align-center">
