--- a/components/image/image.css
+++ b/components/image/image.css
@@ -22,6 +22,8 @@ img{
 
 .img-responsive{
     width : 100%;
-    box-shadow: 0.1rem 0.1rem 0.2rem 0.1rem var(--dark-gray);
+    height : 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
