--- a/components/alert/alert.css
+++ b/components/alert/alert.css
@@ -1,9 +1,8 @@
 .alert{
-    border-radius: 15px;
+    border-radius: 1.5rem;
     font-weight: bold;
     margin : 1rem 0;
     font-family: var(--component-heading-font);
-    /* max-width: 25rem; */
     padding: 1rem;
     /* border : 3px solid red; */
 }
