--- a/components/badges/badge.html
+++ b/components/badges/badge.html
@@ -10,10 +10,9 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <link rel="stylesheet" href="../avatar/avatar.css">
-    <link rel="stylesheet" href="./badge.css">
+    <link rel="stylesheet" href="../../CSS/zest.css">
     <script src="../../prism/prism.js" defer></script>
-    <!-- <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script> -->
+    <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <title>Badges | ZestUI</title>
 </head>
 <body>
@@ -22,12 +21,6 @@
             <nav>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
@@ -122,7 +115,7 @@
                         </section>
                         <div class="divider mb-2"></div>
                         <h2 class="mb-2"  id="badge-on-icons">Badge on icons</h2>
-                        <p class="mb-2">Here we have different classes secified for the alignment of the badge on the icon like <code class="code-text">top</code> , <code class="code-text">right</code> , <code class="code-text">bottom</code> and <code class="code-text">left</code> and for the numbered badge we have the class <code class="code-text">number-badge</code>.</p>
+                        <p class="mb-2">Here we have different classes specified for the alignment of the badge on the icon like <code class="code-text">top</code> , <code class="code-text">right</code> , <code class="code-text">bottom</code> and <code class="code-text">left</code> and for the numbered badge we have the class <code class="code-text">number-badge</code>.</p>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
                                 <div class="icon av-sm">
