--- a/components/button/button.html
+++ b/components/button/button.html
@@ -10,9 +10,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <!-- <link rel="stylesheet" href="../avatar/avatar.css"> -->
-    <link rel="stylesheet" href="./button.css">
-    <!-- <link rel="stylesheet" href="./badge.css"> -->
+    <link rel="stylesheet" href="../../CSS/zest.css">
     <script src="../../prism/prism.js" defer></script>
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <title>Buttons | ZestUI</title>
@@ -23,12 +21,6 @@
             <nav>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
