--- a/components/input/input.html
+++ b/components/input/input.html
@@ -10,24 +10,16 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <link rel="stylesheet" href="./input.css">
-    <link rel="stylesheet" href="../button/button.css">
+    <link rel="stylesheet" href="../../CSS/zest.css">
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <script src="../../prism/prism.js" defer></script>
     <title>Input | ZestUI</title>
 </head>
 <body>
-    <!-- <div class="mega-parent-flex-container"> -->
         <div class="container">
             <nav>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
