--- a/components/typography/typography.html
+++ b/components/typography/typography.html
@@ -10,22 +10,15 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <link rel="stylesheet" href="./typography.css">
+    <link rel="stylesheet" href="../../CSS/zest.css">
     <script src="../../prism/prism.js" defer></script>
     <title>Typography | ZestUI</title>
 </head>
 <body>
-    <!-- <div class="mega-parent-flex-container"> -->
         <div class="container">
             <nav>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
