--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -27,4 +27,5 @@
     --snackbar-background-color : #333;
     --snackbar-btn-color : cyan;
     --snackbar-btn-color-hover : rgba(0, 255, 255, 0.13);
+    --card-badge-bg-color : #5858e6;
 }
