--- a/CSS/zest.css
+++ b/CSS/zest.css
@@ -14,6 +14,7 @@
 @import "../components/image/image.css";
 @import "../components/input/input.css";
 @import "../components/list/list.css";
+@import "../components/modal/modal.css";
 @import "../components/navigation/navigation.css";
 @import "../components/rating/rating.css";
 @import "../components/slider/slider.css";
