--- a/components/input/input.css
+++ b/components/input/input.css
@@ -1,8 +1,8 @@
 .text-area-container{
     display : flex;
     flex-direction: column;
-    padding : 8px;
-    border-radius: 15px;
+    padding : 0.8rem;
+    border-radius: 1.5rem;
     width : 40rem;
     max-width : 40rem;
     /* border : 3px solid red; */
