--- a/components/alert/alert.css
+++ b/components/alert/alert.css
@@ -9,8 +9,8 @@
 
 .alert-danger-solid{
     color : var(--status-dnd);
-    background-color : var(--light-status-dnd);
-    border : 3px solid var(--light-status-dnd);
+    background-color : var(--black);
+    border : 3px solid var(--black);
 }
 
 .alert-danger-outline{
