--- a/components/input/input.html
+++ b/components/input/input.html
@@ -9,10 +9,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../../assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../../prism/prism.css">
-    <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="../../CSS/zest.css">
+    <link rel="stylesheet" href="../../CSS/theme.css">
+    <link rel="stylesheet" href="../../CSS/documentation.css">
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
     <script src="../../prism/prism.js" defer></script>
+    <script src="../../script.js" defer></script>
     <title>Input | ZestUI</title>
 </head>
 <body>
@@ -22,6 +24,14 @@
                     <a href="../../index.html">ZestUI</a>
                 </div>
                 <div class="social-icon m-left-auto">
+                    <div>
+                        <input type="checkbox" class="checkbox" id="checkbox">
+                        <label for="checkbox" class="checkbox-label">
+                        <i class="fas fa-sun toggle-icon"></i>
+                        <i class="fas fa-moon toggle-icon"></i>
+                        <span class="ball"></span>
+                        </label>
+                    </div>
                     <div class="nav-icon">
                         <a href="https://twitter.com/DipenChavda2" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--mdi" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23z" fill="currentColor"></path></svg>
