--- a/components/card/card.css
+++ b/components/card/card.css
@@ -4,6 +4,8 @@
     position: relative;
     width : 22rem;
     background-color: var(--temp-bg-color);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
 }
 
 .card-desc-product-info{
